static/css/style.css
html {
    scroll-behavior: smooth;
}

body {
  font-family: 'Lato', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Catamaran', sans-serif;
  font-weight: 800 !important;
}

@media (min-width: 992px) {
  .animate {
    animation-duration: 0.3s;
    animation-fill-mode: both;
  }
}

@keyframes slideIn {
  0% {
    transform: translateY(1rem);
    opacity: 0;
  }
  100% {
    transform:translateY(0rem);
    opacity: 1;
  }
  0% {
    transform: translateY(1rem);
    opacity: 0;
  }
}

.slideIn {
  animation-name: slideIn;
}

/* Other styles for the page not related to the animated dropdown */


/*!
 * Start Bootstrap - One Page Wonder v5.0.7 (https://startbootstrap.com/template-overviews/one-page-wonder)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-one-page-wonder/blob/master/LICENSE)
 */

.btn-xl {
  text-transform: uppercase;
  padding: 1.5rem 3rem;
  font-size: 0.9rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
}

.bg-black {
  background-color: #000 !important;
}

.rounded-pill {
  border-radius: 5rem;
}

/* Navbar */

.navbar-custom {
  padding-top: 1rem;
  padding-bottom: 1rem;
  background-color: rgba(0, 0, 0, 0.8);
}

.navbar-custom .navbar-brand {
  text-transform: uppercase;
  font-size: 1rem;
  letter-spacing: 0.1rem;
  font-weight: 700;
}

.navbar-custom .navbar-nav .nav-item .nav-link {
  text-transform: uppercase;
  font-size: 0.8rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
}

/* No-login landing page header */

header.masthead {
  position: relative;
  overflow: hidden;
  padding-top: calc(7rem + 72px);
  padding-bottom: 7rem;
  background: url('../images/laugh-bg.jpg');
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: scroll;
  background-size: cover;
  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
}

header.masthead .masthead-content {
  z-index: 1;
  position: relative;
}

header.masthead .masthead-content .masthead-heading {
  font-size: 4rem;
}

header.masthead .masthead-content .masthead-subheading {
  font-size: 2rem;
}

@media (min-width: 992px) {
  header.masthead {
    padding-top: calc(10rem + 55px);
    padding-bottom: 10rem;
  }
  header.masthead .masthead-content .masthead-heading {
    font-size: 6rem;
  }
  header.masthead .masthead-content .masthead-subheading {
    font-size: 4rem;
  }
}

/* General button styles */

.bg-primary {
  background-color: #ee09db !important;
}

.btn-primary {
  background-color: #ee09db;
  border-color: #cc08bc;
  margin: 10px 10px 10px 10px;
}

.btn-primary:active, .btn-primary:focus, .btn-primary:hover {
  background-color: #8d0482 !important;
  border-color: #7a0571 !important;
}

.btn-primary:focus {
  box-shadow: 0 0 0 0.2rem rgba(238, 9, 121, 0.5);
}

.btn-secondary {
  background-color: #ff6a00;
  border-color: #eb6201;
}

.btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
  background-color: #cc5500 !important;
  border-color: #b94e01 !important;
}

.btn-secondary:focus {
  box-shadow: 0 0 0 0.2rem rgba(255, 106, 0, 0.5);
}

/* Log-in/Register pages */

.authentication-page {
  position: relative;
  overflow: scroll;
  height: 100%;
  min-height: 100vh;
  padding-top: calc(7rem + 72px);
  padding-bottom: 7rem;
  background: url('../images/laugh-bg.jpg');
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  background-size: cover;
  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
}

.card-signin {
  border: 0;
  border-radius: 1rem;
  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
}

.card-signin .card-title {
  margin-bottom: 2rem;
  font-weight: 300;
  font-size: 1.5rem;
}

.card-signin .card-body {
  padding: 2rem;
}

.form-signin {
  width: 100%;
}

.form-signin .btn {
  font-size: 80%;
  border-radius: 5rem;
  letter-spacing: .1rem;
  font-weight: bold;
  padding: 1rem;
  transition: all 0.2s;
}

.form-label-group {
  position: relative;
  margin-bottom: 1rem;
}

.form-label-group input {
  height: auto;
  border-radius: 2rem;
}

.form-label-group>input,
.form-label-group>label {
  padding: 20px 20px 20px 20px;
}

.form-label-group>label {
  position: absolute;
  top: 0;
  left: 0;
  display: none;
  width: 100%;
  margin-bottom: 0;
  /* Override default `<label>` margin */
  line-height: 1.5;
  color: #495057;
  border: 1px solid transparent;
  border-radius: .25rem;
  transition: all .1s ease-in-out;
}

.form-label-group input::placeholder {
  display: none;
}

.word-input{
    margin: 10px 10px 10px 10px;
}

/* General styles for background image and content organisation */

.page-bg {
  position: relative;
  overflow: scroll;
  width: 100vw;
  height: 100%;
  background: url('../images/laugh-bg.jpg');
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  background-size: cover;
  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
  color: #fff;
  min-height: 100vh;
  }

  .page-options {
    align-items: center;
    display: flex;
    margin-top: 150px;
  }

  .page-option {
    margin-top: 20px;
    margin-bottom: 20px;
  }

/* Theme Selection */

.mad-lib-theme {
    margin-top: 25px;
    margin-bottom: 25px;
}

.user-input-page {
    position: relative;
    overflow: scroll;
    height: 100%;
    min-height: 100vh;
    padding-top: calc(7rem + 72px);
    padding-bottom: 7rem;
    background: url('../images/laugh-bg.jpg');
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    background-size: cover;
    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
}

/* Mad Lib Card */
.result-card {
    background: rgba(233, 138, 21, .95);
    border-radius: 15px;
    margin: 30px 30px 30px 30px;
    color: #000;
}

/* -----------Footer--------- */

footer .container-fluid {
    padding-top: 10px;
    color: #fff;
    opacity: 0.8;
    background: #000;
    position: static;
    height: auto;
}

.footer-logo p {
    font-size: 13px;
}

.social-links {
    padding-bottom: 15px;
}

.social-links li a i {
    width: 30px;
    height: 30px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 13px;
    line-height: 7px;
    text-align: center;
    color: #fafafa;
    background: rgba(8, 8, 8, .9);
    transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background-color:  rgba(238, 92, 8, 0.85);
}

